--- a/template/header.html
+++ b/template/header.html
@@ -33,6 +33,17 @@
 
           </div>
         </div>
+          <div class="dropdown">
+            <a href="/evf/EVF1-Like_and_comment.html">Extend Viable Features ﹀</a>
+            <div class="dropdown-content">
+              <a  href="/evf/EVF1-Like_and_comment.html">Like and comment</a> <br>
+              <a  href="/evf/EVF2_Health_risk.html">Health risk</a> <br>
+              <a  href="/evf/EVF3-Collection_favourite.html">Collection and favourite</a>
+              <br>
+              <a  href="/evf/EVF4-Substitution.html">Substitution</a><br>
+              <a  href="/evf/EVF5-Shopping_Helper.html">Shopping Helper</a> <br>
+          </div>
+        </div>
 
 
 
