feat(all): user can update recipe

--- a/src/main/resources/templates/recipe/add.html
+++ b/src/main/resources/templates/recipe/add.html
@@ -26,7 +26,7 @@
     <h4 class="font-orkney">Description</h4>
     <textarea class="mb-5 input-area-red iconfont" placeholder="&#xedce; Describe Your Recipe" id="input-describe"></textarea>
     <h4 class="font-orkney">Tags</h4>
-    <input class="input-red mb-5 iconfont w-75" type="text" id="input-tags" placeholder="&#xe618;Add Tags(separated by commas)">
+    <input class="input-red mb-5 iconfont w-75 input-tags" type="text"  placeholder="&#xe618;Add Tags(separated by commas)">
     <div class="d-flex flex-column mb-5">
         <h4 class="font-orkney">Ingredients</h4>
         <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
