--- a/src/main/resources/templates/recipe/edit.html
+++ b/src/main/resources/templates/recipe/edit.html
@@ -14,77 +14,82 @@
 <header th:replace="/fragment/common.html :: header"></header>
 <div class="container d-flex flex-column p-5 w-60">
     <input class=" mb-5 border-red-C14A4A" type="text" id="input-title" placeholder="Please enter recipe name"
-           style="height:60px;" th:value = "${recipeDTO.getRecipeName()}">
+           style="height:60px;" th:value="${recipeDTO.getRecipeName()}">
     <img class="bg-grad-888276 mb-3 rounded-20" id="cover" src="http://iph.href.lu/1280x1024"
          alt="" height="520" style="height:520px" th:src="@{${recipeDTO.getCoverPath()}}">
     <!--    <button class="btn bg-red-C14A4A rounded-50  w-25 ml-auto mb-5">Upload cover</button>-->
     <label class="btn custom-file-upload btn-red ml-auto">
-        <input type="file"  placeholder="Upload cover" id="cover-input" onchange="uploadCover(this)" accept="image/*">
+        <input type="file" placeholder="Upload cover" id="cover-input" onchange="uploadCover(this)" accept="image/*">
         <i class="iconfont icon-LocalUpload"></i>
         Upload Cover
     </label>
 
     <h4 class="font-orkney">Description</h4>
-    <textarea class="mb-5 input-area-red iconfont" placeholder="&#xedce; Describe Your Recipe" id="input-describe" th:text="${recipeDTO.getRecipeDescription()}"></textarea>
+    <textarea class="mb-5 input-area-red iconfont" placeholder="&#xedce; Describe Your Recipe" id="input-describe"
+              th:text="${recipeDTO.getRecipeDescription()}"></textarea>
 
     <h4 class="font-orkney">Tags</h4>
-    <div th:switch = "${recipeDTO.getTagsString().equals('')}" >
-        <div th:case = "true">
-            <input class="input-red mb-5 iconfont w-75" type="text" id="input-tags" placeholder='&#xe618;Add Tags(separated by commas)'>
+    <div th:switch="${recipeDTO.getTagsString().equals('')}">
+        <div th:case="true">
+            <input class="input-red mb-5 iconfont w-75 input-tags" type="text"
+                   placeholder='&#xe618;Add Tags(separated by commas)'>
         </div>
         <div>
-            <input class="input-red mb-5 iconfont w-75" type="text" id="input-tags1" th:value="${recipeDTO.getTagsString()}" ?>
+            <input class="input-red mb-5 iconfont w-75 input-tags" type="text" th:value="${recipeDTO.getTagsString()}"
+                  >
         </div>
     </div>
 
 
     <div class="d-flex flex-column mb-5">
         <h4 class="font-orkney">Ingredients</h4>
-        <div class="d-flex flex-column mb-4 justify-content-between"  th:each="ingredient:${recipeDTO.getIngredientDTOList()}">
-            <div class="d-flex justify-content-between" id="ingred-2">
-                <input class="mr-3 input-red" type="text" th:value = "${ingredient.getIngredientName()}">
-                <input class="input-red" type="text" th:value="${ingredient.getAmount()}">
-                <button class="btn iconfont icon-x" onclick="delIngredientEle(1)"></button>
-            </div>
-        </div>
-
         <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
-            <div class="d-flex justify-content-between" id="ingred-1">
+            <div class="d-flex justify-content-between" th:id="${'ingred-'+status.count}"
+                 th:each="ingredient,status:${recipeDTO.getIngredientDTOList()}">
+                <input class="mr-3 input-red" type="text" th:value="${ingredient.getIngredientName()}">
+                <input class="input-red" type="text" th:value="${ingredient.getAmount()}">
+<!--                TODO delIngredientEle??-->
+                <button class="btn iconfont icon-x" th:id="${'ingred-remove-'+status.count}" onclick="delIngredientEle(-1,this)"></button>
             </div>
+
         </div>
-        <button class="w-25 btn btn-red" id="btn-addIngredient"><i class="iconfont icon-cross"></i> Add an ingredient</button>
+
+
     </div>
+    <button class="w-25 btn btn-red" id="btn-addIngredient"><i class="iconfont icon-cross"></i> Add an ingredient
+    </button>
+</div>
 
 
-    <!--    Step area-->
-    <div class="d-flex flex-column mb-5" id="div-steps">
-        <h4 class="font-orkney">Instructions</h4>
-        <hr>
-        <div class="d-flex  justify-content-between align-content-between" id="step-1" th:each="step: ${recipeDTO.getStepDTOList()}">
-            <div class="d-flex flex-column w-75 mr-3 ">
-                <h4 th:text="${'Step'+step.getStepOrder()}"></h4>
-                <textarea class="h-100 input-area-red iconfont" name="textarea"
-                              placeholder="&#xe7c0; Add step here" th:text="${step.getStepContent()}"></textarea>
-            </div>
-            <div class="d-flex flex-column  ">
-                    <img id="img-step-1" class="rounded-20 mb-1 mt-2"
-                         alt="" width="300" th:src="@{${step.getImgPath()}}">
-                    <label class="btn custom-file-upload btn-red">
-                        <input id="img-input-step-1" type="file"
-                               ACCEPT="image/*" onchange="uploadStepImg(1)">
-                        <i class="iconfont icon-LocalUpload"></i>
-                        Upload a Step Picture
-                    </label>
-            </div>
+<!--    Step area-->
+<div class="container d-flex flex-column m-5" id="div-steps">
+
+    <div class="d-flex  justify-content-between align-content-between" th:id="${'step-'+stepStatus.count}"
+         th:each="step,stepStatus: ${recipeDTO.getStepDTOList()}">
+        <div class="d-flex flex-column w-75 mr-3 ">
+            <h4 th:text="${'Step'+step.getStepOrder()}"></h4>
+            <textarea class="h-100 input-area-red iconfont" name="textarea"
+                      placeholder="&#xe7c0; Add step here" th:text="${step.getStepContent()}"></textarea>
+        </div>
+        <div class="d-flex flex-column  ">
+            <img th:id="${'img-step-'+stepStatus.count}" class="rounded-20 mb-1 mt-2"
+                 alt="" width="300" th:src="@{${step.getImgPath()}}">
+            <label class="btn custom-file-upload btn-red">
+                <input th:id="${'img-input-step-'+stepStatus.count}" type="file"
+                       ACCEPT="image/*" onchange="uploadStepImg(-1,this)">
+                <i class="iconfont icon-LocalUpload"></i>
+                Upload a Step Picture
+            </label>
         </div>
     </div>
+</div>
 
-    <!--    Operation Area-->
-    <div class="d-flex">
-        <button class="btn btn-red" id="btn-addStep"><i class="iconfont icon-cross"></i>Add a step</button>
-        <button class="btn btn-red" id="btn-removeStep">Remove last step</button>
-        <button class="btn btn-red ml-auto" onclick="submit()"> <i class="iconfont icon-submit"></i> Submit</button>
-    </div>
+<!--    Operation Area-->
+<div class="d-flex">
+    <button class="btn btn-red" id="btn-addStep"><i class="iconfont icon-cross"></i>Add a step</button>
+    <button class="btn btn-red" id="btn-removeStep">Remove last step</button>
+    <button class="btn btn-red ml-auto" onclick="update()"><i class="iconfont icon-submit"></i> Submit</button>
+</div>
 
 
 </div>
@@ -92,9 +97,11 @@
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
 <script th:inline="javascript">
-let user=[[${user}]]
-console.log(user)
-let userId=user['userId']
+    let user = [[${user}]]
+    let recipeDTO = [[${recipeDTO}]]
+    console.log(user)
+    let userId = user['userId']
+    let recipeId = recipeDTO['id']
 </script>
 <script type="text/javascript" src="/js/recipe/add.js"></script>
 
