feat(all): users can update, delete and view their recipes

--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -32,7 +32,7 @@
         <div class="row padding">
             <div class="col-md-12 col-lg-8">
                 <div>
-                    <div id="author"><h3>Author: amos</h3></div>
+                    <div id="author"><h3 th:text="${'Author: '+ recipeDTO.author}">Author: amos</h3></div>
                 </div>
                 <div>
                     <h3>Description</h3>
