--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="/"><i class="iconfont icon-xuanzhongshangcheng"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ml-4">
-                    <a class="nav-link" href="/pantry/show"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
+                    <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
                 </li>
                 <li class="nav-item ml-4">
                     <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
