--- a/src/main/resources/templates/user/kitchen.html
+++ b/src/main/resources/templates/user/kitchen.html
@@ -15,51 +15,57 @@
 <div class="container d-flex flex-column align-items-center">
     <div class="d-flex flex-column my-5 align-items-center">
         <div class="text-center my-3">
-            <img th:src="@{${user.getAvatarPath()!=null?user.getAvatarPath():'/images/avatar.jpg'}}" class="rounded-circle shadow-sm" alt="..." width="150" height="150">
+            <img th:src="@{${user.getAvatarPath()!=null?user.getAvatarPath():'/images/avatar.jpg'}}"
+                 class="rounded-circle shadow-sm" alt="..." width="150" height="150">
         </div>
-        <h2 class="text-grad-888276 ">Admin's Kitchen</h2>
+        <h2 class="text-grad-888276 " th:text="${user.username}">Admin's Kitchen</h2>
         <div class="my-2">
-            <a href="/user/profile" class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile
+            <a href="/user/profile" class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit
+                Profile
             </a>
-            <a class=" btn bg-red-C14A4A rounded-50  mx-2" href="/recipe/add"><i class="iconfont icon-cross"></i>Add a recipe</a>
+            <a class=" btn bg-red-C14A4A rounded-50  mx-2" href="/recipe/add"><i class="iconfont icon-cross"></i>Add a
+                recipe</a>
         </div>
 
     </div>
     <div class="d-flex w-100  mb-4">
-        <button  class="btn bg-success rounded-left text-white"  disabled><i class="iconfont icon-cook"></i> Created
-            recipes</button>
-        <a class="btn  mr-auto rounded-right " href="/user/saves"><i class="iconfont icon-bookmarks"></i> Saves</a>
+        <span class="btn bg-success rounded-left text-white" disabled><i class="iconfont icon-cook"></i> Created
+            recipes
+        </span>
         <a class="btn bg-red-C14A4A rounded-50 ml-auto" href="#"><i class="iconfont icon-lanzi mr-1"></i>Go to
             pantry</a>
     </div>
-    <div class="d-flex w-100  h-100 p-4 justify-content-around mb-5  border-red-C14A4A" >
-        <div class="card shadow-2-2-5 p-2 rounded-20" style="width: 40%">
-            <div class="d-flex">
-                <img src="/images/pasted.png" class="rounded shadow-2-2-5 m-2" alt="" width="200px" height="130px">
-                <div class="d-flex flex-column">
-                    <h2>Title</h2>
-                    <p> description</p>
+    <div class="row w-100 h-100 p-4  mb-5  border-red-C14A4A ">
+        <!--        <div class="card shadow-2-2-5 p-2 rounded-20" style="width: 40%">-->
+        <!--            <div class="d-flex">-->
+        <!--                <img src="/images/pasted.png" class="rounded shadow-2-2-5 m-2" alt="" width="200px" height="130px">-->
+        <!--                <div class="d-flex flex-column">-->
+        <!--                    <h2>Title</h2>-->
+        <!--                    <p> description</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <div class=" col-3 " th:each="vo:${voList}">
+            <div class="p-3  d-flex flex-column shadow-sm rounded-10 shadow-0-2-4 ">
+                <a th:href="@{${vo.url}}">
+                    <img class="rounded-20 " th:src="@{${vo.coverPath==null?'/images/pasted.png':vo.coverPath}}"
+                         src="/images/pasted.png" alt="">
+                    <span style="font-size: 20px" th:text="${#strings.abbreviate(vo.recipeName,18)}"></span>
+                    <p class="" style="font-size: 14px;color: #6b6668; height: 100px"
+                       th:text="${#strings.abbreviate(vo.recipeDescription,120) }">Cooking a perfect batch of
+                        white rice without a rice ... </p>
+
+                </a>
+                <div class="ml-2">
+                    <a th:href="@{${vo.url+'/edit'}}" class="btn btn-success rounded-50 "><i
+                            class="iconfont icon-pencil mr-1"></i> Edit</a>
+                    <button class="btn bg-red-C14A4A rounded-50 " th:data-id="${vo.id}"
+                            onclick="deleteRecipe(this.getAttribute('data-id'))"  >
+                        <i class="iconfont icon-x mr-1"></i>Delete</button>
                 </div>
             </div>
-            <div class="ml-2">
-                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-pencil mr-1"></i> Edit</button>
-                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-x mr-1"></i>Delete</button>
-                <button class="btn btn-light ml-auto bg-grad-888276" disabled><i class="iconfont icon-entypocalendar mr-1"></i>01.10.2050</button>
-            </div>
-        </div>
-        <div class="card shadow-2-2-5 p-2 rounded-20" style="width: 40%">
-            <div class="d-flex">
-                <img src="/images/pasted.png" class="rounded shadow-2-2-5 m-2" alt="" width="200px" height="130px">
-                <div class="d-flex flex-column">
-                    <h2>Title</h2>
-                    <p> description</p>
-                    <button class="mt-auto">01.10.2050</button>
-                </div>
-            </div>
-            <div class="ml-2">
-                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-pencil mr-1"></i> Edit</button>
-                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-x mr-1"></i>Delete</button>
-            </div>
+
+
         </div>
     </div>
 </div>
@@ -68,7 +74,35 @@
 <!--<script type="text/javascript" src="/js/">-->
 <!--</script>-->
 <script th:inline="javascript">
+    $("img.rounded-20").each(function (i) {
+        $(this).jqthumb({
+            width: '100%',//
+            height: '200px',//
+            zoom: '1',//
+            method: 'auto',
+            after: function (obj) {
+                $(obj).css("border-radius", "20px")
+            }
+        });
+    })
 
+    function deleteRecipe(id) {
+        bootbox.confirm("Are you sure you want to submit this recipe?", function (result) {
+            if (result) {
+                axios.delete('/api/recipe',{
+                    params: {
+                        recipeId:id
+                    }
+                }).then(res=>{
+                    console.log(res)
+                    window.location.reload()
+                }).catch(err => {
+                    bootbox.alert("Delete Failed")
+                    console.log(err)
+                })
+            }
+        })
+    }
 </script>
 </body>
 </html>
