--- a/src/main/resources/templates/user/kitchen.html
+++ b/src/main/resources/templates/user/kitchen.html
@@ -32,7 +32,7 @@
         <span class="btn bg-success rounded-left text-white" disabled><i class="iconfont icon-cook"></i> Created
             recipes
         </span>
-        <a class="btn bg-red-C14A4A rounded-50 ml-auto" href="#"><i class="iconfont icon-lanzi mr-1"></i>Go to
+        <a class="btn bg-red-C14A4A rounded-50 ml-auto" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Go to
             pantry</a>
     </div>
     <div class="row w-100 h-100 p-4  mb-5  border-red-C14A4A ">
@@ -71,38 +71,9 @@
 </div>
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<!--<script type="text/javascript" src="/js/">-->
-<!--</script>-->
+<script type="text/javascript" src="/js/user/kitchen.js">
+</script>
 <script th:inline="javascript">
-    $("img.rounded-20").each(function (i) {
-        $(this).jqthumb({
-            width: '100%',//
-            height: '200px',//
-            zoom: '1',//
-            method: 'auto',
-            after: function (obj) {
-                $(obj).css("border-radius", "20px")
-            }
-        });
-    })
-
-    function deleteRecipe(id) {
-        bootbox.confirm("Are you sure you want to submit this recipe?", function (result) {
-            if (result) {
-                axios.delete('/api/recipe',{
-                    params: {
-                        recipeId:id
-                    }
-                }).then(res=>{
-                    console.log(res)
-                    window.location.reload()
-                }).catch(err => {
-                    bootbox.alert("Delete Failed")
-                    console.log(err)
-                })
-            }
-        })
-    }
 </script>
 </body>
 </html>
