--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/>
     <link rel="stylesheet" href="/css/app.css">
+    <script src="/js/public/iconfont.js"></script>
     <link rel="stylesheet" href="/css/icon.css">
     <link rel="stylesheet" href="/css/icon2.css">
 
@@ -115,6 +116,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="/js/public/common.js"></script>
     <script src="/js/public/jqthumb.min.js"></script>
+
+
 </div>
 </body>
 </html>
