--- a/src/main/resources/templates/recipe/add.html
+++ b/src/main/resources/templates/recipe/add.html
@@ -28,7 +28,12 @@
     <h4 class="font-orkney">Tags</h4>
     <input class="input-red mb-5 iconfont w-75 input-tags" type="text"  placeholder="&#xe618;Add Tags(separated by commas)">
     <div class="d-flex flex-column mb-5">
-        <h4 class="font-orkney">Ingredients</h4>
+        <h4>
+            <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-Ingredients"></use>
+            </svg>
+            Ingredients
+        </h4>
         <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
             <div class="d-flex justify-content-between" id="ingred-1"><input class="mr-3 input-red" type="text"
                                                                              placeholder="Name"> <input
