--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
 <head>
     <meta charset="UTF-8">
     <th:block th:include="/fragment/common.html :: head"></th:block>
@@ -10,98 +9,95 @@
     <title>Step by step instructions</title>
     <link rel="stylesheet" href="/css/detail.css">
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
-
-
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
 <div class="container d-flex w-75 flex-column">
 
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
         <div class="row welcome ml-auto">
             <h1 class="display-4" th:text="${recipeDTO.getRecipeName()}">Greek Lemon Chicken and Potatoes</h1>
             <hr>
         </div>
     </div>
     <!-- Description area-->
-    <div class="container-fluid padding">
+    <div class=" border-red-C14A4A mb-5 p-4">
         <div style="text-align:center" class="col-md-12">
-            <img th:src="@{${recipeDTO.getCoverPath()}}" class="img-fluid" id="img1">
+            <img th:src="@{${recipeDTO.getCoverPath()}}" class="img-fluid rounded-20" id="img1">
         </div>
         <hr>
         <div class="row padding">
             <div class="col-md-12 col-lg-8">
-                <div>
-                    <div id="author"><h3 th:text="${'Author: '+ recipeDTO.author}">Author: amos</h3></div>
-                </div>
-                <div>
-                    <h3>Description</h3>
-                    <p class="lead" th:text="${recipeDTO.getRecipeDescription()}">I don't have the energy or courage to
-                        cater for a living but, if I did, this Greek lemon chicken and potatoes would be one of my go-to
-                        entrees, and not just for big, fat weddings. It's a proven crowd-pleaser, simple to make, and easy
-                        on the wallet. </p>
-                </div>
+                <h3>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-description"></use>
+                    </svg>
+                    Description
+                </h3>
+                <p class="lead" th:text="${recipeDTO.getRecipeDescription()}">I don't have the energy or courage to
+                    cater for a living but, if I did, this Greek lemon chicken and potatoes would be one of my go-to
+                    entrees, and not just for big, fat weddings. It's a proven crowd-pleaser, simple to make, and
+                    easy
+                    on the wallet. </p>
+
             </div>
             <div class="col-md-12 col-lg-4">
-                <h3>Tags</h3>
-
-                <button th:each="tag: ${recipeDTO.getTagList()}" th:text="${tag.getTagName()}" type="button"
-                        class="btn btn-outline-primary ml-2 mb-2">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tag-fill" fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                              d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1H2zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                <h3>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-tagpx"></use>
                     </svg>
-                    Greek
+                    Tags
+                </h3>
+                <button th:each="tag: ${recipeDTO.getTagList()}" th:text="${'&#xe612;  '+tag.getTagName()}"
+                        type="button"
+                        class="btn btn-outline-primary iconfont ml-3 mb-2">
                 </button>
+                <div id="author" class="mt-5">
+                    <h3 th:text="${'Author: '+ recipeDTO.author}"></h3>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Ingredients area-->
-    <div class="container-fluid  padding">
-        <h2>Ingredients</h2>
-        <hr>
-        <div class="checkbox">
-            <div class="custom-control custom-checkbox col-md-12 ml-5 "
-                 th:each="ingredient:${recipeDTO.getIngredientDTOList()} ">
+    <div class="d-flex flex-column border-red-C14A4A mb-5 p-4">
+        <h3 class="mb-5">
+            <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-Ingredients"></use>
+            </svg>
+            Ingredients
+        </h3>
 
-                <label >
-                    <input type="checkbox"  onclick="checkbox(this)">
-                    <span
-                            th:text="${ingredient.getAmount()}"></span>
-                    <span
-                            th:text="${ingredient.getIngredientName()}"></span>
+        <div th:each="ingredient:${recipeDTO.getIngredientDTOList()} ">
 
-                </label>
-            </div>
+            <label>
+                <input type="checkbox" onclick="checkbox(this)">
+                <span
+                        th:text="${ingredient.getAmount()}"></span>
+                <span
+                        th:text="${ingredient.getIngredientName()}"></span>
+
+            </label>
         </div>
+
         <hr>
     </div>
 
 
     <!-- Instructions area-->
-    <div class="container-fluid  padding">
-        <h2>Instructions</h2>
-        <hr>
-        <div class="col-md-12">
-            <div th:each="step: ${recipeDTO.getStepDTOList()}">
-                <h4 th:text="${'Step'+step.getStepOrder()}"></h4>
-                <div class="row padding">
-                    <div class="col-md-12 col-lg-8">
-                        <p class="lead" th:text="${step.getStepContent()}">
-                        </p>
-                    </div>
-                    <div class="col-md-12 col-lg-4">
-                        <img th:src="@{${step.getImgPath()}}" class="img-fluid">
-                        <!--                    <img src="/static/images/recipes/19/stepImg-1.png" class="img-fluid" alt="">-->
-                    </div>
+    <div class="container-fluid border-red-C14A4A p-5">
+        <div th:each="step: ${recipeDTO.getStepDTOList()}" class="mt-4">
+            <h4 th:text="${'Step'+step.getStepOrder()}"></h4>
+            <div class="row padding">
+                <div class="col-md-12 col-lg-8">
+                    <p class="lead" th:text="${step.getStepContent()}"></p>
+                </div>
+                <div class="col-md-12 col-lg-4">
+                    <img th:src="@{${step.getImgPath()}}" class="img-fluid rounded-20">
+                    <!-- <img src="/static/images/recipes/19/stepImg-1.png" class="img-fluid" alt="">-->
                 </div>
             </div>
-
-
         </div>
-        <hr>
     </div>
 
 
@@ -118,6 +114,7 @@
             $(obj).next().next().css("text-decoration", "none");
         }
     }
+
     $('textarea').each(function () {
         this.setAttribute('style', 'height:' + (this.scrollHeight) + 'px;overflow-y:hidden;');
     }).on('input', function () {
