--- a/src/main/resources/templates/tag/show.html
+++ b/src/main/resources/templates/tag/show.html
@@ -58,8 +58,7 @@
 <script th:inline="javascript">
 
 </script>
-<script ype="text/javascript" src="/js/tag/tags.js">
-
+<script type="text/javascript" src="/js/tag/tags.js">
 </script>
 </body>
 </html>
