--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -57,24 +57,6 @@
 
 <div class="container d-flex justify-content-center">
     <div class="row w-85">
-        <!--
-        <tr th:each="recipe : ${recipes}">
-            <div class="col-sm-4">
-                <div class="card" style="width: 225px;  margin: center;">
-                    <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
-                    <div class="card-body">=
-                        <td th:text="${recipe.title}" class="card-title">Recipe title</td>
-                        <td th:text="${recipe.auther}" class="card-text">Recipe author</td>
-                    </div>
-                    <div class="card-body text-center">
-                        <a href="#" class="card-link">link  </a>
-                        <a href="#" class="card-link">link  </a>
-                        <a href="#" class="card-link">link</a>
-                    </div>
-                </div>
-            </div>
-        </tr>
-        -->
 
         <div class="col-sm-3 m-2" th:each="vo:${voList}">
             <a th:href="@{${vo.url}}">
@@ -84,39 +66,13 @@
                     <p style="font-size: 14px;color: #6b6668;"
                        th:text="${#strings.abbreviate(vo.recipeDescription,100) }">Cooking a perfect batch of
                         white rice without a rice ... </p>
-                    <span class="d-flex"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> <span
+                    <span class="d-flex"> <span
                             class="ml-auto" style="font-size: 13px" th:text="${'By '+vo.author}"> Zhihao Liang</span>
                 </span>
                 </div>
             </a>
         </div>
-        <!--                <div class="card-body text-center">-->
-        <!--                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"-->
-        <!--                                                     aria-hidden="true"> </i></a>-->
-        <!--                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>-->
-        <!--                    </a>-->
-        <!--                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>-->
-        <!--                    </a>-->
-        <!--                </div>-->
 
-
-        <!--        <div class="col-sm-3">-->
-        <!--            <div class="card" style="color: #C14A4A; width: 225px;">-->
-        <!--                <img src="/images/salad.jpg" class="card-img-top" alt="">-->
-        <!--                <div class="card-body">-->
-        <!--                    <h5 class="card-title">Salad</h5>-->
-        <!--                    <p class="card-text">Author</p>-->
-        <!--                </div>-->
-        <!--                <div class="card-body text-center">-->
-        <!--                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"-->
-        <!--                                                     aria-hidden="true"> </i></a>-->
-        <!--                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>-->
-        <!--                    </a>-->
-        <!--                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>-->
-        <!--                    </a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
 
     </div>
 </div>
