--- a/src/main/resources/templates/pantry/show.html
+++ b/src/main/resources/templates/pantry/show.html
@@ -16,22 +16,32 @@
     <div class="d-flex flex-column my-10 mb-5 align-items-center ">
         <h1 class="text-inkfree " style="font-size:6.2em">Cook with what you have!</h1>
     </div>
-    <div class="d-flex w-100 mb-5" >
-        <input class=" mr-sm-2 border-green-28A745 rounded-50 " id="input-ingredient" style="width:10em" type="text" placeholder="Enter ingredients">
-        <h4 class="text-dark ml-auto">My ingredients</h4>
-        <button class="btn bg-red-C14A4A rounded-50  ml-auto" onclick="search()"><i class="iconfont icon-sousuo mr-1"></i>Search Recipes</button>
+    <div class="d-flex flex-column w-100 mb-5">
+        <label for="input-ingredient">Press Enter for searching
+        </label>
+        <input class=" border-green-28A745 rounded-20 " id="input-ingredient"
+               style="width:20em" type="text"
+               placeholder="Enter an ingredient">
+        <h4 class="text-dark ml-auto">
+            <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-Ingredients"></use>
+            </svg>
+            My ingredients
+            <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-Ingredients"></use>
+            </svg>
+        </h4>
     </div>
     <button class="btn mr-auto btn-danger m-2" onclick="clearIngredients()">Clear All Ingredients</button>
-    <div id="div-ingredient" class="d-flex flex-wrap w-100  h-100 p-4  mb-5  border-red-C14A4A" >
+    <div id="div-ingredient" class="d-flex flex-wrap w-100  h-100 p-4  mb-5  border-red-C14A4A">
 
     </div>
+    <button class="btn mr-auto btn-danger m-2" onclick="clearAllResults()">Clear All Results</button>
+    <div class="d-flex flex-wrap" id="cardDiv"></div>
 </div>
 <footer th:replace="/fragment/common.html :: footer"></footer>
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
 <script type="text/javascript" src="/js/pantry/show.js">
-</script>
-<script th:inline="javascript">
-
 </script>
 </body>
 </html>
