--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -13,8 +13,8 @@
 <header th:replace="/fragment/common.html :: header"></header>
 
 <div class="container d-flex justify-content-center">
-    <div class="row my-5 w-75 animate__fadeInRightBig animate__bounceIn">
-        <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around">
+    <div class="row my-5 w-75  animate__fadeInRightBig animate__bounceIn">
+        <div class="col-4 bg-red-C14A4A   rounded-left bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around">
 
             <h2>Hello, Friend!</h2>
             <p>Enter your personal details and start journey with us
@@ -24,7 +24,7 @@
             </p>
             <a class="rounded-lg w-75 btn btn-outline-light" href="/register">Here to create an account</a>
         </div>
-        <div class="col-8 shadow-lg d-flex flex-column p-5 rounded-left align-items-center">
+        <div class="col-8 shadow-lg d-flex flex-column p-5 rounded-right align-items-center">
             <h1 class="title mb-5 font-comic animate__bounceIn">
                 Sign in to Cookiez
             </h1>
