feat(all): fix pantry and search

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
+                    <a class="nav-link" href="/search"><i class="iconfont icon-chaxun mr-1"></i>Search</a>
                 </li>
             </ul>
 <!--            <form class="form-inline mx-2 my-lg-0 ml-5" action="#" th:action="@{/search}" method="get">-->
