--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -14,12 +14,12 @@
 <header th:replace="/fragment/common.html :: header"></header>
 <div class="container d-flex w-75 flex-column">
 
-    <div class="container-fluid mb-5">
-        <div class="row welcome ml-auto">
+
+        <div class=" welcome mr-auto  my-5">
             <h1 class="display-4" th:text="${recipeDTO.getRecipeName()}">Greek Lemon Chicken and Potatoes</h1>
             <hr>
         </div>
-    </div>
+
     <!-- Description area-->
     <div class=" border-red-C14A4A mb-5 p-4">
         <div style="text-align:center" class="col-md-12">
