--- a/src/main/resources/templates/recipe/edit.html
+++ b/src/main/resources/templates/recipe/edit.html
@@ -47,14 +47,14 @@
     </div>
 
 
-    <div class="d-flex flex-column mb-5">
+    <div class="d-flex flex-column ">
         <h3 class="mb-5">
             <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-Ingredients"></use>
             </svg>
             Ingredients
         </h3>
-        <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
+        <div class="d-flex flex-column mt-4 justify-content-between" id="div-ingredients">
             <div class="d-flex justify-content-between mb-4" th:id="${'ingred-'+status.count}"
                  th:each="ingredient,status:${recipeDTO.getIngredientDTOList()}">
                 <input class="mr-3 input-red" type="text" th:value="${ingredient.getIngredientName()}">
@@ -68,7 +68,7 @@
 
 
     </div>
-    <button class="w-25 btn btn-red" id="btn-addIngredient"><i class="iconfont icon-cross"></i> Add an ingredient
+    <button class="w-25 btn btn-red mt-2" id="btn-addIngredient"><i class="iconfont icon-cross"></i> Add an ingredient
     </button>
     <!--    Step area-->
     <div class=" d-flex flex-column mt-5 " id="div-steps">
